src/a12/a12.h

struct a12_state;
struct pk_response {
	bool authentic;
	uint8_t key_pub[32];
	uint8_t key_session[32];
	int (*state_access)(
		const uint8_t pub[static 32], const char* name, size_t sz, const char* mode);
};
struct a12_dynreq {
	char host[46];
	char pubk[32];
	uint16_t port;
	char authk[12];
	int proto;
};
struct a12_context_options {
	struct pk_response (*pk_lookup)(struct a12_state* S, uint8_t pub[static 32], void*);
	void* pk_lookup_tag;
	uint8_t priv_key[32];
	bool disable_ephemeral_k;
	char secret[32];
	int local_role;
	size_t rekey_bytes;
	bool allow_directory_link;
	bool (*sink)(uint8_t* buf, size_t buf_sz, void* tag);
	void* sink_tag;
};
void* a12_sensitive_alloc(size_t nb);
void a12_sensitive_free(void*, size_t nb);
struct a12_state* a12_client(struct a12_context_options*);
struct a12_state* a12_server(struct a12_context_options*);
bool
a12_free(struct a12_state*);
void a12_set_session(
	struct pk_response* dst, uint8_t pubk[static 32], uint8_t privk[static 32]);
void a12_unpack(
	struct a12_state*, const uint8_t*, size_t, void* tag, void (*on_event)
		(struct arcan_shmif_cont* cont, int chid, struct arcan_event*, void*));
void a12_set_destination(
	struct a12_state*, struct arcan_shmif_cont* wnd, uint8_t chid);
struct a12_unpack_cfg {
	void* tag;
	void* (*request_compressed_vbuffer)(
		int fourcc[static 4], size_t nb, void* tag);
	shmif_pixel* (*request_raw_buffer)(
		size_t w, size_t h, size_t* stride, int flags, void* tag);
	shmif_asample* (*request_audio_buffer)(
		size_t n_ch, size_t samplerate, size_t size_bytes, void* tag);
	void (*signal_video)(
		size_t x1, size_t y1, size_t x2, size_t y2, void* tag);
	void (*signal_audio)(size_t bytes, void* tag);
	bool (*directory_open)(struct a12_state*,
		uint8_t ident_req[static 32],
		uint8_t mode,
		struct a12_dynreq* out,
		void* tag);
	void (*on_discover)(struct a12_state*,
		int, const char*, bool, uint8_t[static 32], void*);
	void* on_discover_tag;
};
void a12_set_destination_raw(struct a12_state*,
	uint8_t ch, struct a12_unpack_cfg cfg, size_t unpack_cfg_sz);
size_t
a12_flush(struct a12_state*, uint8_t**, int allow_blob);
enum a12_bstream_type {
	A12_BTYPE_STATE = 0,
	A12_BTYPE_FONT = 1,
	A12_BTYPE_FONT_SUPPL = 2,
	A12_BTYPE_BLOB = 3,
	A12_BTYPE_CRASHDUMP = 4,
	A12_BTYPE_APPL = 5,
	A12_BTYPE_APPL_RESOURCE = 6,
	A12_BTYPE_APPL_CONTROLLER = 7
};
void
a12_enqueue_bstream(struct a12_state*,
	int fd, int type, uint32_t id, bool streaming,
	size_t sz, const char extid[static 16]);
void
a12_enqueue_blob(
	struct a12_state*, const char* const, size_t, uint32_t id,
	int type, const char extid[static 16]);
bool
	a12_write_tunnel(struct a12_state*, uint8_t chid, const uint8_t* const, size_t);
bool
	a12_set_tunnel_sink(struct a12_state*, uint8_t chid, int fd);
int
	a12_alloc_tunnel(struct a12_state* S);
void
	a12_drop_tunnel(struct a12_state*, uint8_t chid);
int
	a12_tunnel_descriptor(struct a12_state* S, uint8_t chid, bool* ok);
int
a12_poll(struct a12_state*);
int
a12_auth_state(struct a12_state*);
void
a12_set_channel(struct a12_state*, uint8_t chid);
void
a12_set_trace_level(int mask, FILE* dst);
enum a12_vframe_method {
	VFRAME_METHOD_DEFER = -1, 
	VFRAME_METHOD_NORMAL = 0, 
	VFRAME_METHOD_RAW_NOALPHA = 1,
	VFRAME_METHOD_RAW_RGB565 = 2,
	VFRAME_METHOD_H264 = 5,
	VFRAME_METHOD_TPACK_ZSTD = 7,
	VFRAME_METHOD_ZSTD = 8,
	VFRAME_METHOD_DZSTD = 9
};
enum a12_vframe_compression_bias {
	VFRAME_BIAS_LATENCY = 0,
	VFRAME_BIAS_BALANCED,
	VFRAME_BIAS_QUALITY,
};
enum a12_vframe_postprocess {
	VFRAME_POSTPROCESS_SRGB = 1,
	VFRAME_POSTPROCESS_ORIGO_LL = 2
};
struct a12_vframe_opts {
	enum a12_vframe_method method;
	enum a12_vframe_compression_bias bias;
	enum a12_vframe_postprocess postprocess;
	int ratefactor; 
	size_t bitrate; 
};
enum a12_aframe_method {
	AFRAME_METHOD_RAW = 0,
};
struct a12_aframe_opts {
	enum a12_aframe_method method;
};
struct a12_aframe_cfg {
	uint8_t channels;
	uint32_t samplerate;
};
enum a12_bhandler_flag {
	A12_BHANDLER_CACHED = 0,
	A12_BHANDLER_NEWFD,
	A12_BHANDLER_DONTWANT,
	A12_BHANDLER_NEWFD_NOCOMPRESS
};
enum a12_bhandler_state {
	A12_BHANDLER_CANCELLED = 0,
	A12_BHANDLER_COMPLETED,
	A12_BHANDLER_INITIALIZE
};
struct a12_bhandler_meta {
	enum a12_bhandler_state state;
	enum a12_bstream_type type;
	uint8_t checksum[16];
	uint64_t known_size;
	bool streaming;
	uint8_t channel;
	uint64_t streamid;
	uint32_t identifier;
	char extid[17];
	int fd;
	struct arcan_shmif_cont* dcont;
};
struct a12_bhandler_res {
	enum a12_bhandler_flag flag;
	int fd;
};
void
a12_set_bhandler(struct a12_state*,
	struct a12_bhandler_res (*on_bevent)(
		struct a12_state* S, struct a12_bhandler_meta, void* tag),
	void* tag
);
bool
a12_channel_enqueue(struct a12_state*, struct arcan_event*);
void
a12_channel_aframe(
	struct a12_state* S, shmif_asample* buf,
	size_t n_samples,
	struct a12_aframe_cfg cfg,
	struct a12_aframe_opts opts
);
void
a12_channel_vframe(
	struct a12_state* S,
	struct shmifsrv_vbuffer* vb,
	struct a12_vframe_opts opts
);
struct a12_iostat {
	size_t b_in;
	size_t b_out;
	size_t vframe_backpressure; 
	size_t roundtrip_latency;
	size_t ms_vframe;           
	float ms_vframe_px;
	size_t packets_pending;     
};
bool a12_request_dynamic_resource(
	struct a12_state* S,
	uint8_t ident_pubk[static 32],
	bool prefer_tunnel,
	void(*request_reply)(struct a12_state*, struct a12_dynreq, void* tag),
	void* tag);