src/a12/a12_int.h

#define ZSTD_DEFAULT_LEVEL 3
#define ZSTD_VIDEO_LEVEL 2
#define VIDEO_FRAME_DRIFT_WINDOW 8
#define MAC_BLOCK_SZ 16
#define NONCE_SIZE 8
#define CONTROL_PACKET_SIZE 128
#define CIPHER_ROUNDS 8
#define BLOB_QUEUE_CAP (128 * 1024)
enum {
	STATE_NOPACKET       = 0, 
	STATE_CONTROL_PACKET = 1, 
	STATE_EVENT_PACKET   = 2, 
	STATE_AUDIO_PACKET   = 3, 
	STATE_VIDEO_PACKET   = 4, 
	STATE_BLOB_PACKET    = 5, 
	STATE_1STSRV_PACKET  = 6, 
	STATE_BROKEN
};
enum control_commands {
	COMMAND_HELLO        = 0, 
	COMMAND_SHUTDOWN     = 1, 
	COMMAND_NEWCH        = 2, 
	COMMAND_CANCELSTREAM = 3, 
	COMMAND_VIDEOFRAME   = 4, 
	COMMAND_AUDIOFRAME   = 5, 
	COMMAND_BINARYSTREAM = 6, 
	COMMAND_PING         = 7, 
	COMMAND_REKEY        = 8, 
	COMMAND_DIRLIST      = 9, 
	COMMAND_DIRSTATE     = 10,
	COMMAND_DIRDISCOVER  = 11,
	COMMAND_DIROPEN      = 12,
};
enum hello_mode {
	HELLO_MODE_NOASYM  = 0,
	HELLO_MODE_REALPK  = 1,
	HELLO_MODE_EPHEMPK = 2
};
enum channel_cfg {
	CHANNEL_INACTIVE = 0, 
	CHANNEL_SHMIF    = 1, 
	CHANNEL_RAW      = 2  
};
#define SEQUENCE_NUMBER_SIZE 8
enum {
	POSTPROCESS_VIDEO_RGBA   = 0,
	POSTPROCESS_VIDEO_RGB    = 1,
	POSTPROCESS_VIDEO_RGB565 = 2,
	POSTPROCESS_VIDEO_H264   = 5, 
	POSTPROCESS_VIDEO_TZSTD  = 7, 
	POSTPROCESS_VIDEO_DZSTD  = 8, 
	POSTPROCESS_VIDEO_ZSTD   = 9  
};
struct appl_meta;
struct blob_out;
struct blob_out {
	uint8_t checksum[16];
	int fd;
	uint8_t chid;
	int type;
	uint32_t identifier;
	char extid[16];
	size_t left;
	char* buf;
	size_t buf_sz;
	bool streaming;
	bool active;
	uint64_t streamid;
	uint64_t rampup_seqnr;
	struct ZSTD_CCtx_s* zstd;
	struct blob_out* next;
};
struct a12_channel {
	int active;
	struct arcan_shmif_cont* cont;
	struct a12_unpack_cfg raw;
	struct {
		struct video_frame vframe;
		struct audio_frame aframe;
		struct binary_frame bframe;
	} unpack_state;
	struct shmifsrv_vbuffer acc;
	struct {
		uint8_t* compression;
		struct ZSTD_CCtx_s* zstd;
#if defined(WANT_H264_ENC) || defined(WANT_H264_DEC)
		struct {
			AVCodecParserContext* parser;
			AVCodecContext* encdec;
			const AVCodec* codec;
			AVFrame* frame;
			AVPacket* packet;
			struct SwsContext* scaler;
			size_t w, h;
			bool failed;
		} videnc;
#endif
	};
};
struct a12_state;
struct a12_state {
	struct a12_context_options* opts;
	struct appl_meta* directory;
	uint64_t directory_clk;
	bool notify_dynamic;
	uint8_t last_mac_in[MAC_BLOCK_SZ];
	uint64_t current_seqnr;
	uint64_t last_seen_seqnr;
	uint64_t out_stream;
	bool advenc_broken;
	struct {
		uint32_t frame_window[VIDEO_FRAME_DRIFT_WINDOW]; 
		size_t pending; 
	} congestion_stats;
	struct a12_iostat stats;
	size_t buf_sz[2];
	uint8_t* bufs[2];
	uint8_t buf_ind;
	size_t buf_ofs;
	struct blob_out* pending;
	size_t active_blobs;
	struct a12_bhandler_res
		(*binary_handler)(struct a12_state*, struct a12_bhandler_meta, void*);
	void* binary_handler_tag;
	struct a12_channel channels[256];
	int in_channel;
	uint32_t in_stream;
	int out_channel;
	void (*on_auth)(struct a12_state*, void*);
	void* auth_tag;
	uint8_t decode[65536];
	uint16_t decode_pos;
	uint16_t left;
	uint8_t state;
	volatile uint32_t cookie;
	struct {
		uint8_t ephem_priv[32];
		uint8_t real_priv[32];
		uint64_t rekey_pos;
		uint8_t remote_pub[32];
	} keys;
	bool server;
	bool cl_firstout;
	int authentic;
	int remote_mode;
	bool auth_latched;
	size_t prepend_unpack_sz;
	uint8_t* prepend_unpack;
	blake3_hasher out_mac, in_mac;
	struct chacha_ctx* enc_state;
	struct chacha_ctx* dec_state;
};
enum {
	STREAM_FAIL_OUTDATED = 0,
	STREAM_FAIL_UNKNOWN = 1,
	STREAM_FAIL_ALREADY_KNOWN = 2
};
struct appl_meta {
	FILE* handle;
	char* buf;
	uint64_t buf_sz;
	struct appl_meta* next;
	uint16_t identifier;
	uint16_t categories;
	uint16_t permissions;
	uint8_t hash[4];
	struct {
		char name[18];
		char short_descr[69];
	} appl;
	uint64_t update_ts;
};