src/shmif/arcan_shmif_server.h

struct shmifsrv_vbuffer {
	int state;
	shmif_pixel* buffer;
	struct {
		bool origo_ll : 1;
		bool ignore_alpha : 1;
		bool subregion : 1;
		bool srgb : 1;
		bool hwhandles : 1;
	} flags;
	size_t w, h, pitch, stride;
	uint64_t vpts;
	struct arcan_shmif_region region;
	size_t formats[4];
	int planes[4];
};