src/a12/a12_types.zig


pub const a12_bhandler_meta = extern struct {
    state: a12_bhandler_state = 0,
    @"type": a12_bstream_type = 0,
    checksum: [16]u8 = std.mem.zeroes([16]u8),
    known_size: u64 = 0,
    streaming: bool = false,
    channel: u8 = 0,
    _pad0: [6]u8 = .{ 0, 0, 0, 0, 0, 0 },
    streamid: i64 = 0,
    identifier: u32 = 0,
    extid: [17]u8 = std.mem.zeroes([17]u8),
    _pad1: [3]u8 = .{ 0, 0, 0 },
    fd: c_int = 0,
    _pad2: [4]u8 = .{ 0, 0, 0, 0 },
    // [*c] matches cImport-style C pointer; callers use `meta.dcont.*.field`.
    dcont: [*c]arcan_shmif_cont = null,
};
pub const struct_a12_bhandler_meta = a12_bhandler_meta;

pub const a12_bhandler_res = extern struct {
    flag: a12_bhandler_flag = 0,
    fd: c_int = 0,
};
pub const struct_a12_bhandler_res = a12_bhandler_res;

// ══════════════════════════════════════════════════════════════════════════════
// Section 15: a12.h — struct a12_iostat
// ══════════════════════════════════════════════════════════════════════════════

pub const a12_iostat = extern struct {
    b_in: usize = 0,
    b_out: usize = 0,
    vframe_backpressure: usize = 0,
    roundtrip_latency: usize = 0,
    ms_vframe: usize = 0,
    ms_vframe_px: f32 = 0,
    _pad0: [4]u8 = .{ 0, 0, 0, 0 },
    packets_pending: usize = 0,
};
pub const struct_a12_iostat = a12_iostat;

// ══════════════════════════════════════════════════════════════════════════════
// Section 16: a12.h — struct a12_unpack_cfg
// ══════════════════════════════════════════════════════════════════════════════

pub const a12_unpack_cfg = extern struct {
    tag: ?*anyopaque = null,
    request_compressed_vbuffer: ?*const fn (fourcc: *[4]c_int, nb: usize, tag: ?*anyopaque) callconv(.c) ?*anyopaque = null,
    request_raw_buffer: ?*const fn (w: usize, h: usize, stride: *usize, flags: c_int, tag: ?*anyopaque) callconv(.c) ?[*]shmif_pixel = null,
    request_audio_buffer: ?*const fn (n_ch: usize, samplerate: usize, size_bytes: usize, tag: ?*anyopaque) callconv(.c) ?[*]shmif_asample = null,
    signal_video: ?*const fn (x1: usize, y1: usize, x2: usize, y2: usize, tag: ?*anyopaque) callconv(.c) void = null,
    signal_audio: ?*const fn (bytes: usize, tag: ?*anyopaque) callconv(.c) void = null,
    directory_open: ?*const fn (S: [*c]a12_state, ident_req: [*c]u8, mode: u8, out: [*c]a12_dynreq, tag: ?*anyopaque) callconv(.c) bool = null,
    on_discover: ?*const fn (S: [*c]a12_state, arg1: u8, arg2: [*c]const u8, arg3: u8, kpub: [*c]u8, id: u16, tag: ?*anyopaque) callconv(.c) void = null,
    on_discover_tag: ?*anyopaque = null,
};
pub const struct_a12_unpack_cfg = a12_unpack_cfg;

// ══════════════════════════════════════════════════════════════════════════════
// Section 17: a12.h — struct a12_channel_meta
// ══════════════════════════════════════════════════════════════════════════════

pub const a12_channel_meta = extern struct {
    inbound_binary_total: usize = 0,
    inbound_binary_depth: usize = 0,
    outbound_binary_total: usize = 0,
    outbound_binary_depth: usize = 0,
    video_active: bool = false,
    audio_active: bool = false,
};
pub const struct_a12_channel_meta = a12_channel_meta;

// ══════════════════════════════════════════════════════════════════════════════
// Section 18: a12_int.h — STATE_*, control_commands, hello_mode, channel_cfg,
//   POSTPROCESS_*, STREAM_FAIL_*
// ══════════════════════════════════════════════════════════════════════════════

// Decoder state machine
pub const STATE_NOPACKET: c_int = 0;
pub const STATE_CONTROL_PACKET: c_int = 1;
pub const STATE_EVENT_PACKET: c_int = 2;
pub const STATE_AUDIO_PACKET: c_int = 3;
pub const STATE_VIDEO_PACKET: c_int = 4;
pub const STATE_BLOB_PACKET: c_int = 5;
pub const STATE_1STSRV_PACKET: c_int = 6;
pub const STATE_BROKEN: c_int = 7;

// Control commands
pub const COMMAND_HELLO: c_int = 0;
pub const COMMAND_SHUTDOWN: c_int = 1;
pub const COMMAND_NEWCH: c_int = 2;
pub const COMMAND_CANCELSTREAM: c_int = 3;
pub const COMMAND_VIDEOFRAME: c_int = 4;
pub const COMMAND_AUDIOFRAME: c_int = 5;
pub const COMMAND_BINARYSTREAM: c_int = 6;
pub const COMMAND_PING: c_int = 7;
pub const COMMAND_REKEY: c_int = 8;
pub const COMMAND_DIRLIST: c_int = 9;
pub const COMMAND_DIRSTATE: c_int = 10;
pub const COMMAND_DIRDISCOVER: c_int = 11;
pub const COMMAND_DIROPEN: c_int = 12;
pub const COMMAND_DIROPENED: c_int = 13;
pub const COMMAND_TUNDROP: c_int = 14;

// HELLO sub-mode
pub const HELLO_MODE_NOASYM: c_int = 0;
pub const HELLO_MODE_REALPK: c_int = 1;
pub const HELLO_MODE_EPHEMPK: c_int = 2;

// Channel configuration
pub const CHANNEL_INACTIVE: c_int = 0;
pub const CHANNEL_SHMIF: c_int = 1;
pub const CHANNEL_RAW: c_int = 2;

// Video post-process tags (a12_int.h anonymous enum)
pub const POSTPROCESS_VIDEO_RGBA: c_int = 0;
pub const POSTPROCESS_VIDEO_RGB: c_int = 1;
pub const POSTPROCESS_VIDEO_RGB565: c_int = 2;
pub const POSTPROCESS_VIDEO_H264: c_int = 5;
pub const POSTPROCESS_VIDEO_TZSTD: c_int = 7;
pub const POSTPROCESS_VIDEO_DZSTD: c_int = 8;
pub const POSTPROCESS_VIDEO_ZSTD: c_int = 9;

pub const STREAM_FAIL_OUTDATED: c_int = 0;
pub const STREAM_FAIL_UNKNOWN: c_int = 1;
pub const STREAM_FAIL_ALREADY_KNOWN: c_int = 2;

// a12_int.h layout constants
pub const MAC_BLOCK_SZ: usize = 16;
pub const NONCE_SIZE: usize = 8;
pub const CONTROL_PACKET_SIZE: usize = 128;
pub const CIPHER_ROUNDS: c_int = 8;
pub const BLOB_QUEUE_CAP: usize = 128 * 1024;
pub const OUTBOUND_BUFFER_COUNT: usize = 2;
pub const BEACON_KEY_CAP: usize = 15;
pub const SEQUENCE_NUMBER_SIZE: usize = 8;
pub const ZSTD_DEFAULT_LEVEL: c_int = 3;
pub const ZSTD_VIDEO_LEVEL: c_int = 2;
pub const VIDEO_FRAME_DRIFT_WINDOW: usize = 8;

// ══════════════════════════════════════════════════════════════════════════════
// Section 19: struct arcan_shmif_cont (subset needed by a12 callers)
// ══════════════════════════════════════════════════════════════════════════════
//
// a12 only uses `arcan_shmif_cont` as a tagged pointer — it passes the
// pointer into shmif / a12_set_destination and reads a handful of fields
// (user, hints, w/h, cookie, privext). The authoritative layout lives in
// src/shmif/shmif_types.zig; here we keep a byte-identical copy so the
// compiler can type-check field accesses without cross-module dependency.

pub const shmif_ext_hidden = shmif.struct_shmif_ext_hidden;
pub const struct_shmif_ext_hidden = shmif_ext_hidden;

pub const arcan_shmif_cont = shmif.arcan_shmif_cont;
pub const struct_arcan_shmif_cont = shmif.struct_arcan_shmif_cont;

/// struct shmif_resize_ext — extended resize parameters.
pub const shmif_resize_ext = extern struct {
    abuf_sz: usize = 0,
    abuf_cnt: c_int = 0,
    samplerate: c_int = 0,
    vbuf_cnt: c_int = 0,
    _pad0: [4]u8 = .{ 0, 0, 0, 0 },
    rows: usize = 0,
    cols: usize = 0,
    meta: c_int = 0,
    _pad1: [4]u8 = .{ 0, 0, 0, 0 },
};
pub const struct_shmif_resize_ext = shmif_resize_ext;

// ══════════════════════════════════════════════════════════════════════════════
// Section 20: shmifsrv_vbuffer — server-side video buffer
// ══════════════════════════════════════════════════════════════════════════════

// Re-export from shmif_types so a12 consumers and shmif consumers agree on
// the underlying Zig type through the dispatch-struct pattern.
pub const shmifsrv_vbuffer_flags = shmif.struct_shmifsrv_vbuffer_flags;
pub const shmifsrv_vbuffer = shmif.shmifsrv_vbuffer;
pub const struct_shmifsrv_vbuffer = shmif.struct_shmifsrv_vbuffer;

// ══════════════════════════════════════════════════════════════════════════════
// Section 21: a12_helper.h
// ══════════════════════════════════════════════════════════════════════════════

pub const a12helper_pollstate = c_uint;

pub const A12HELPER_POLL_SHMIF: a12helper_pollstate = 1;
pub const A12HELPER_WRITE_OUT: a12helper_pollstate = 2;
pub const A12HELPER_DATA_IN: a12helper_pollstate = 4;

pub const FRAME_RAW_SHMIFSRV_VBUFFER: c_uint = 0;
pub const FRAME_ENCODED: c_uint = 1;

pub const EvalVcodecFn = *const fn (
    S: ?*a12_state,
    segid: c_int,
    vb: ?*shmifsrv_vbuffer,
    tag: ?*anyopaque,
) callconv(.c) a12_vframe_opts;

pub const a12helper_opts = extern struct {
    eval_vcodec: ?EvalVcodecFn = null,
    tag: ?*anyopaque = null,
    vframe_soft_block: usize = 0,
    vframe_block: usize = 0,
    redirect_exit: ?[*:0]const u8 = null,
    devicehint_cp: ?[*:0]const u8 = null,
    bcache_dir: c_int = 0,
    _pad0: [4]u8 = .{ 0, 0, 0, 0 },
    cache: ?*frame_cache = null,
    lock: ?*anyopaque = null, // pthread_mutex_t*
};
pub const struct_a12helper_opts = a12helper_opts;

// ══════════════════════════════════════════════════════════════════════════════
// Section 22: extern a12 / a12int public entry points
// ══════════════════════════════════════════════════════════════════════════════

pub extern fn a12_sensitive_alloc(nb: usize) ?*anyopaque;
pub extern fn a12_sensitive_free(ptr: ?*anyopaque, nb: usize) void;

pub extern fn a12_client(opts: ?*a12_context_options) ?*a12_state;
pub extern fn a12_server(opts: ?*a12_context_options) ?*a12_state;
pub extern fn a12_free(S: ?*a12_state) bool;

pub extern fn a12_set_session(dst: ?*pk_response, pubk: [*]const u8, privk: [*]const u8) void;
pub extern fn a12_set_signing_pair(S: ?*a12_state, pubk: [*]const u8, privk: [*]const u8) bool;
pub extern fn a12_get_sign_pubkey(S: ?*a12_state, outkey: [*]u8) void;

pub const UnpackEventFn = *const fn (
    cont: ?*arcan_shmif_cont,
    chid: c_int,
    ev: ?*arcan_event,
    tag: ?*anyopaque,
) callconv(.c) void;
pub extern fn a12_unpack(
    S: ?*a12_state,
    buf: [*c]const u8,
    sz: usize,
    tag: ?*anyopaque,
    on_event: ?UnpackEventFn,
) void;

pub extern fn a12_set_destination(S: ?*a12_state, wnd: ?*arcan_shmif_cont, chid: u8) void;
pub extern fn a12_set_destination_raw(S: ?*a12_state, ch: u8, cfg: a12_unpack_cfg, unpack_cfg_sz: usize) void;

pub extern fn a12_channel_bprogress_hook(
    S: ?*a12_state,
    chid: u8,
    bytecount: usize,
    trigger: ?*const fn (status: c_int, bin: usize, bout: usize, total: usize, tag: ?*anyopaque) callconv(.c) void,
    tag: ?*anyopaque,
) void;

pub extern fn a12_channel_status(S: ?*a12_state, chid: u8) a12_channel_meta;
pub extern fn a12_find_free_channel(S: ?*a12_state, chid: [*]u8) bool;

pub extern fn a12_flush(S: ?*a12_state, out: *[*c]u8, allow_blob: c_int) usize;

pub extern fn a12_enqueue_bstream(
    S: ?*a12_state,
    fd: c_int,
    @"type": c_int,
    id: u32,
    streaming: bool,
    sz: usize,
    extid: [*]const u8,
) void;

pub extern fn a12_enqueue_blob(
    S: ?*a12_state,
    data: [*]const u8,
    len: usize,
    id: u32,
    @"type": c_int,
    extid: [*]const u8,
) void;

pub extern fn a12_request_file(
    S: ?*a12_state,
    chid: u8,
    ns: u16,
    id: u32,
    name: [*:0]const u8,
) void;

pub extern fn a12_write_tunnel(S: ?*a12_state, chid: u8, buf: [*]const u8, sz: usize) bool;
pub extern fn a12_set_tunnel_sink(S: ?*a12_state, chid: u8, fd: c_int) bool;
pub extern fn a12_alloc_tunnel(S: ?*a12_state) c_int;
pub extern fn a12_drop_tunnel(S: ?*a12_state, chid: u8) void;
pub extern fn a12_tunnel_descriptor(S: ?*a12_state, chid: u8, ok: *bool) c_int;

pub extern fn a12_poll(S: ?*a12_state) c_int;
pub extern fn a12_auth_state(S: ?*a12_state) c_int;

pub extern fn a12_set_channel(S: ?*a12_state, chid: u8) void;
pub extern fn a12_get_channel(S: ?*a12_state) u8;

pub extern fn a12_set_trace_level(mask: c_int, dst: ?*anyopaque) void;

pub const BHandlerFn = *const fn (
    S: ?*a12_state,
    meta: a12_bhandler_meta,
    tag: ?*anyopaque,
) callconv(.c) a12_bhandler_res;
pub extern fn a12_set_bhandler(S: ?*a12_state, on_bevent: ?BHandlerFn, tag: ?*anyopaque) void;

pub extern fn a12_channel_enqueue(S: ?*a12_state, ev: ?*arcan_event) bool;
pub extern fn a12_channel_aframe(
    S: ?*a12_state,
    buf: [*]shmif_asample,
    n_samples: usize,
    cfg: a12_aframe_cfg,
    opts: a12_aframe_opts,
) void;
pub extern fn a12_channel_vframe(
    S: ?*a12_state,
    vb: ?*shmifsrv_vbuffer,
    opts: a12_vframe_opts,
) c_int;
